Fix crash on WebAPK startup

This CL fixes a crash in WebApkUpdateManager#onBuiltWebApk() on startup when
updating the WebAPK fails. When updating the WebAPK fails,
WebApkInstaller::OnFailure() calls the callback with an empty package name. This
causes an empty package name to be incorrectly  used to construct the WebAPK id
in WebApkUpdateManager#onBuiltWebApk()

BUG=654251

Review-Url: https://codereview.chromium.org/2409453002
Cr-Commit-Position: refs/heads/master@{#424811}

Former-commit-id: 7ba820fdf3fd1c56cc1796a995be3a103c1704f9