chrome/browser/android/webapk/webapk_update_manager.h
@@ -17,11 +17,12 @@ class WebApkUpdateManager {
   static bool Register(JNIEnv* env);
 
   // Called after either a request to update the WebAPK has been sent, or the
-  // update process fails.
-  // |success| indicates whether the request was issued to the server. A "true"
-  // value of |success| does not guarantee that the WebAPK will be successfully
-  // updated.
-  static void OnBuiltWebApk(bool success, const std::string& webapk_package);
+  // update process fails. |success| indicates whether the request was issued
+  // to the server. A "true" value of |success| does not guarantee that the
+  // WebAPK will be successfully updated.
+  static void OnBuiltWebApk(const std::string& id,
+                            bool success,
+                            const std::string& webapk_package);
 
  private:
   DISALLOW_IMPLICIT_CONSTRUCTORS(WebApkUpdateManager);
